fix workflow parameters